--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -32,6 +32,7 @@ jobs:
       - name: Install silicium with all dependencies
         if: steps.cache-deps.outputs.cache-hit != 'true'
         run: |
+          pip install "git+https://github.com/SamimiesGames/silicium@master"
           pip install -Ur requirements_dev.txt
           python -m pip install -e .
       # - name: Lint
